--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "https://github.com/geekhub-js/chedream-js.git"
   },
   "keywords": [
-    "chedrem"
+    "chedream"
   ],
   "author": "",
   "license": "ISC",
@@ -21,7 +21,11 @@
   "homepage": "https://github.com/geekhub-js/chedream-js",
   "dependencies": {
     "angular": "^1.3.13",
-    "angular-ui-router": "^0.2.13",
-    "uglify-js": "^2.4.16"
+    "angular-ui-router": "^0.2.13"
+  },
+  "devDependencies": {
+    "gulp": "^3.8.10",
+    "gulp-concat-css": "^2.0.0",
+    "gulp-minify-css": "^0.4.5"
   }
 }
