--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/geekhub-js/chedream-js",
   "dependencies": {
     "angular": "^1.3.13",
+    "angular-animate": "^1.3.13",
     "angular-ui-router": "^0.2.13"
   },
   "devDependencies": {
