--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "dependencies": {
     "angular": "^1.3.13",
     "angular-animate": "^1.3.13",
-    "angular-ui-router": "^0.2.13"
+    "angular-ui-router": "^0.2.13",
+    "bower": "^1.3.12"
   },
   "devDependencies": {
     "gulp": "^3.8.10",
