--- a/package.json
+++ b/package.json
@@ -28,6 +28,11 @@
   "devDependencies": {
     "gulp": "^3.8.10",
     "gulp-concat-css": "^2.0.0",
-    "gulp-minify-css": "^0.4.5"
+    "gulp-minify-css": "^0.4.5",
+    "gulp-clean": "^0.3.1",
+    "gulp-concat": "^2.5.2",
+    "gulp-less": "^3.0.1",
+    "gulp-uglify": "^1.1.0",
+    "less": "~1.7.0"
   }
 }
